# chatters-Backend

./: .env  Dockerfile  Dockerfile.poetry  docker-compose.yml  pyproject.toml  requirements.txt  start.sh
.github/workflows/: azure-container-webapp.yml
app/: main.py
app/config/: db.py
app/routes/: user_routes.py
app/schema/: models.py
app/utils/: helper.py
